# MAI_OOP_2023

./: CMakeLists.txt  README.md  tests.cpp
Laba_1/: lab1.h  lab1f.cpp  laba1.cpp
laba1/: lab1.h  lab1f.cpp  laba1.cpp  tests.cpp
laba2/: Binary.cpp  CMakeLists.txt  binary.h  lab2.cpp  tests2.cpp
laba3/: CMakeLists.txt  array.cpp  array.hpp  figure.hpp  hexagon.cpp  hexagon.hpp  main3.cpp  pentagon.cpp  pentagon.hpp  rhomb.cpp  rhomb.hpp  tests3.cpp
laba4/: CMakeLists.txt  array.hpp  figure.hpp  hexagon.hpp  main.cpp  methods.hpp  pentagon.hpp  rhomb.hpp  tests04.cpp
laba5/: CMakeLists.txt  alloc.hpp  list.hpp  main5.cpp  tests5.cpp
laba6/: CMakeLists.txt  dragon.cpp  dragon.h  frog.cpp  frog.h  knight.cpp  knight.h  main6.cpp  npc.cpp  npc.h  observer.cpp  observer.h  tests6.cpp
laba7/: CMakeLists.txt  dragon.cpp  dragon.h  frog.cpp  frog.h  knight.cpp  knight.h  main7.cpp  npc.cpp  npc.h  tests7.cpp
