cmake_minimum_required(VERSION 3.10)

project(Laban1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(googletest)

include(CTest)

add_executable(tests tests.cpp  lab1f.cpp)

include_directories(${GTEST_INCLUDE_DIRS})

target_link_libraries(tests PRIVATE GTest::gtest_main)


include(GoogleTest)

gtest_discover_tests(tests)